--- a/app/views/create-account/company-details.html
+++ b/app/views/create-account/company-details.html
@@ -4,8 +4,6 @@
 
 {% block beforeContent %}
 
-<!-- <a href="task-list.html" class="govuk-back-link">Back</a> -->
-
 {% endblock %}
 
 {% block content %}
@@ -14,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="account-details?codCompleted=true">
+      <form id="company-details-form" method="post" novalidate action="account-details">
 
         <!-- COMPANY NAME -->
         <div>
@@ -174,7 +172,7 @@
           <button type="submit" class="govuk-button">
             Return to account details
           </button>
-          <button type="submit" class="govuk-button govuk-button--secondary"  formaction="./contact-details?codCompleted=true">
+          <button type="submit" class="govuk-button govuk-button--secondary"  formaction="./contact-details">
             Add contact details
           </button>
         </div>
@@ -186,5 +184,38 @@
 
     </div>
   </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const form = document.getElementById('company-details-form');
+      const formFields = form.querySelectorAll('input[type="text"], input[type="email"], input[type="tel"], textarea');
+  
+      // Function to check if any form field is filled out
+      function isFormFilled() {
+        for (let field of formFields) {
+          if (field.value.trim() !== '') {
+            return true;
+          }
+        }
+        return false;
+      }
+  
+      // Update status based on form input
+      function updateStatus() {
+        if (isFormFilled()) {
+          localStorage.setItem('companyDetailsProvided', 'true');
+        } else {
+          localStorage.setItem('companyDetailsProvided', 'false');
+        }
+      }
+  
+      // Add event listener to form submission
+      form.addEventListener('submit', function(event) {
+        updateStatus();
+      });
+    });
+  </script>
+  
+
 
 {% endblock %}
