--- a/app/views/create-account/contact-details.html
+++ b/app/views/create-account/contact-details.html
@@ -20,15 +20,10 @@
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
       {% endif %}
 
-      <form id="contact-details-form" method="post" novalidate action="account-details?cpCompleted=true">
-
+      <form id="contact-details-form" method="post" novalidate action="account-details">
         <!-- EMAILS -->
-        
         {{ govukInput({
-          label: {
-            text: "Primary email address",
-            classes: "govuk-label--s"
-          },
+          label: { text: "Primary email address", classes: "govuk-label--s" },
           classes: "govuk-input--width-30",
           id: "email-1",
           name: "email-1",
@@ -37,12 +32,9 @@
           autocomplete: "email",
           spellcheck: false
         }) }}
-
+      
         {{ govukInput({
-          label: {
-            text: "Secondary email address",
-            classes: "govuk-label--s"
-          },
+          label: { text: "Secondary email address", classes: "govuk-label--s" },
           classes: "govuk-input--width-30",
           id: "email-2",
           name: "email-2",
@@ -51,14 +43,10 @@
           autocomplete: "email",
           spellcheck: false
         }) }}
-
+      
         <!-- PHONE NUMBERS -->
-
         {{ govukInput({
-          label: {
-            text: "Mobile telephone number",
-            classes: "govuk-label--s"
-          },
+          label: { text: "Mobile telephone number", classes: "govuk-label--s" },
           id: "mobile-number",
           name: "mobileNumber",
           value: data['mobileNumber'],
@@ -66,12 +54,9 @@
           autocomplete: "tel",
           classes: "govuk-input--width-20"
         }) }}
-
+      
         {{ govukInput({
-          label: {
-            text: "Business telephone number",
-            classes: "govuk-label--s"
-          },
+          label: { text: "Business telephone number", classes: "govuk-label--s" },
           id: "business-number",
           name: "businessNumber",
           value: data['businessNumber'],
@@ -79,12 +64,9 @@
           autocomplete: "tel",
           classes: "govuk-input--width-20"
         }) }}
-
+      
         {{ govukInput({
-          label: {
-            text: "Home telephone number",
-            classes: "govuk-label--s"
-          },
+          label: { text: "Home telephone number", classes: "govuk-label--s" },
           id: "home-number",
           name: "homeNumber",
           value: data['homeNumber'],
@@ -92,33 +74,27 @@
           autocomplete: "tel",
           classes: "govuk-input--width-20"
         }) }}
-
-
-        {% if data['businessUnit'] == "Port Talbot" %}
-
-        {% endif %}
-
-         <div class="govuk-button-group">
+      
+        <div class="govuk-button-group">
           <button type="submit" class="govuk-button" id="return-to-account-details">
             Return to account details
           </button>
           {% if data['defendantTypeF'] == "Adult or youth only" %}
-            <button type="submit" class="govuk-button govuk-button--secondary" formaction="./employer-details?cpCompleted=true" >
+            <button type="submit" class="govuk-button govuk-button--secondary" formaction="./employer-details?cpCompleted=true">
               Add employer details
             </button>
           {% endif %}
           {% if data['defendantTypeF'] == "Adult or youth with parent or guardian to pay" %}
-            <button type="submit" class="govuk-button govuk-button--secondary" formaction="./employer-details?cpCompleted=true" >
+            <button type="submit" class="govuk-button govuk-button--secondary" formaction="./employer-details?cpCompleted=true">
               Add employer details
             </button>
           {% endif %}
           {% if data['defendantTypeF'] == "Company" %}
-            <button type="submit" class="govuk-button govuk-button--secondary" formaction="./add-offence?cpCompleted=true" >
+            <button type="submit" class="govuk-button govuk-button--secondary" formaction="./add-offence?cpCompleted=true">
               Add offence details
             </button>
           {% endif %}
         </div>
-
       </form>
 
       <p class="govuk-body"><a class="govuk-link govuk-! govuk-link--no-visited-state" href="account-details">Cancel</a></p>
@@ -143,7 +119,7 @@
         }
         return false;
       }
-      
+  
       // Update status based on form input
       function updateStatus() {
         if (isFormFilled()) {
@@ -152,13 +128,14 @@
           localStorage.setItem('contactDetailsProvided', 'false');
         }
       }
-      
+  
       // Add event listeners to form buttons
       form.addEventListener('submit', function(event) {
         updateStatus();
       });
     });
   </script>
+
 
 
 
